src/assets/scss/components/header.scss
$sidePadding: 4%;

.header {
	&.sticky {
		.header {
			&__inner {
				position: fixed;
				top: 0;
				left: 0;
				width: 100%;
				z-index: 10;
			}
		}

		&.is-scroll {
			.header__inner {
				background-color: $main-color;
			}
		}
	}

	&__inner {
		position: relative;
		display: flex;
		align-items: center;
		justify-content: space-between;
		height: 70px;
		padding: 0 $sidePadding;

		// Reference: netflix 스타일
		background-image: linear-gradient(
			to bottom,
			rgba(0, 0, 0, 0.7) 10%,
			rgba(0, 0, 0, 0)
		);

		transition: background-color 0.3s linear;
		will-change: background-color;
	}

	// left
	&__left,
	&__right {
		display: flex;
		height: 100%;
	}

	// logo
	&__logo {
		display: flex;
		align-items: center;
		height: 100%;
		margin-right: 20px;

		.logo {
			width: 92.5px;
			height: 31px;
			object-fit: cover;
		}
	}

	&__nav {
		.nav-menu-btn {
			display: none;
		}
		
		.nav-list {
			display: flex;
			align-items: center;
			justify-content: flex-start;

			&__item {
				&:not(:last-child) {
					margin-right: 20px;
				}

				.nav-link {
					line-height: 70px;
					font-size: 14px;
					transition: opacity 0.3s ease;

					// exact path
					&.router-link-exact-active {
						color: $white;
						pointer-events: none;
						font-weight: bold;
					}

					&:hover {
						opacity: 0.6;
					}
				}
			}
		}
	}

	&__nav-dropdown {
		display: none;
	}

	&__right {
		align-items: center;

		.nav-icon {
			color: $white;
			font-size: 22px;
			transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
			will-change: transform, opacity;

			&:hover {
				opacity: 0.6;
			}

			&:focus {
				transform: scale(1.1);
			}
		}
	}

	&__nav-item {
		display: flex;
		align-items: center;
		height: 70px;

		&:not(:first-child) {
			margin-left: 30px;
		}
	}

	// search
	&__search {
		position: relative;
		display: flex;
		align-items: center;
		height: 100%;

		.search-input {
			position: absolute;
			top: 50%;
			right: 0;
			transform: translateY(-50%);
			margin: 0;
		}
	}
	
	&__account-dropdown {
		font-size: 12px;

		.account-dropdown {
			&__btn {
				display: flex;
				align-items: center;
				height: 70px;
				cursor: pointer;

				&:hover {
					.caret-icon {
						transform: rotate(180deg);
					}
				}

				.avatar {
					margin-right: 10px;
				}

				.caret-icon {
					transition: transform 0.3s ease;
					will-change: transform;
				}
			}
		}

		.dropdown-menu {
			&__content {
				right: 0;
				width: 200px;
			}
		}

		.account-menu {
			padding: 1rem 0;
			border-bottom: 1px solid $oc-gray-8;

			&__item {
				display: flex;
				align-items: center;
				justify-content: space-between;
				padding: 0 0.5rem;

				&:not(:first-child) {
					margin-top: 1rem;
				}
				
				&:last-child {
					margin-top: 1.5rem;
				}
			}

			&__link {
				flex: 1;

				&:hover {
					text-decoration: underline;
				}

				.profile {
					&__info {
						display: flex;
						align-items: center;

						.avatar {
							margin-right: 10px;
						}
					}
				}
			}
		}

		.config-menu {
			padding: 1rem 0;

			&__item {
				padding: 0 0.5rem;

				&:not(:first-child) {
					margin-top: 1rem;
				}

				a {
					&:hover {
						text-decoration: underline;
					}
				}
			}
		}
	}

	// media-query
	@include labtop-small {
		height: 41px;

		&__inner {
			background: $header-color;
			height: 41px;
		}

		&__logo {
			margin-right: 16px;

			.logo {
				width: 56px;
				height: 17px;
			}
		}

		&__nav {
			.nav-menu-btn {
				display: flex;
				align-items: center;
				line-height: 41px;
				cursor: pointer;

				&::after {
					content: '';
					width: 8px;
					height: 7px;
					margin-left: 5px;
					background: url('#{$iconImages}caret-down.svg') no-repeat center/100%;
				}
			}

			.nav-list {
				display: none;
			}
		}

		&__nav-dropdown {
			display: block;
			font-size: 12px;

			.dropdown-menu {
				&__content {
					left: 50%;
					margin-left: -100px;
					width: 200px;
				}
			}

			.nav-dropdown {
				&__item {
					a {
						display: block;
						height: 4rem;
						line-height: 4rem;
						text-align: center;
						color: rgba(255, 255, 255, 0.8);

						&.router-link-exact-active {
							color: $white;
							font-weight: bold;
							pointer-events: none;
						}

						&:hover {
							background: rgba(255, 255, 255, 0.2);
						}
					}
				}
			}
		}

		&__right {
			.nav-icon {
				font-size: 18px;
			}
		}

		&__nav-item {
			height: 100%;
		}

		&__account-dropdown {
			.account-dropdown {
				&__btn {
					height: 41px;

					.avatar {
						margin: 0;
					}

					.caret-icon {
						display: none;
					}
				}
			}
		}
	}
	// media-query End
}

